--- a/src/stories/global.css
+++ b/src/stories/global.css
@@ -7,6 +7,19 @@ button {
 	cursor: pointer;
 }
 
+img {
+	max-width: 100%;
+	height: auto;
+}
+
+.controls {
+	position: sticky;
+	top: 0;
+	z-index: 1;
+	padding-block: 1em;
+	background-color: #FFFFFF;
+}
+
 .wrapper {
 	padding-top: 2rem;
 }
